add liftoff and turbofan bench commands, and bn/no-bn yaml files for mimc

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:withdraw": "node --wasm-interpret-all index.js tests/tests-withdraw.yml",
     "test:withdraw-bn": "node --wasm-interpret-all index.js tests/tests-withdraw-bn.yml",
     "test:mimc": "node --wasm-interpret-all index.js tests/tests-mimc.yml",
+    "bench:liftoff": "node --liftoff --no-wasm-tier-up index.js",
+    "bench:turbofan": "node index.js",
+    "test:turbofan:mimc": "node index.js tests/tests-mimc-no-bignums.yml",
     "build": "npx asc assembly/mixer/main.ts -b assembly/mixer/out/main.wasm -t assembly/mixer/out/main.wat --validate && cd assembly/mixer && gulp"
   },
   "repository": {
